charts-kustomize/pocket-id/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
spec:
  selector:
    matchLabels:
      app: pocket-id
  serviceName: pocket-id
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pocket-id
        app.kubernetes.io/name: pocket-id
    spec:
      volumes:
        - name: temp
          emptyDir: {}
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: main
        image: ghcr.io/pocket-id/pocket-id:v0.37.0@sha256:8979c04b6231b661e2e4e2dba211adb169e35d1a69efed0170d67911a5171994
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
           path: /health
           port: 80
           scheme: HTTP
        readinessProbe:
          failureThreshold: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
           path: /health
           port: 80
           scheme: HTTP
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
        - name: temp
          mountPath: /.config
          subPath: .config
        - name: temp
          mountPath: /.local
          subPath: .local
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: openebs-zfspv
      volumeMode: Filesystem
      resources:
        requests:
          storage: 5Gi
