charts-kustomize/pocket-id/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: pocket-id
  ingress:
  - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/instance
              operator: In
              values:
                - ingress-nginx
  egress:
    - toFQDNs:
        - matchName: "api.github.com"
      toPorts:
        - ports:
            - port: "443"
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
